welcome.lessons.welcome.loopfor.LoopFor.scala.code
for(nbPas<- 0 to 6){
	avance();
	if(estSurBiscuit){
		prendBiscuit();
		if (nbPas!=0)
		recule();
		if (nbPas=0)
		poseBiscuit();
	}
}
